--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	This is first commit!
 	
 	This line is added on Github
-	<div class="footer">
+	<div class="footer footer1">
 	footer
 	</div>
 </body>
